--- a/web_SciPy/Dockerfile
+++ b/web_SciPy/Dockerfile
@@ -4,8 +4,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -y
 RUN apt-get install -y python3-pip python3-dev
 
-ENV CELERY_BROKER_URL redis://redis:6379/0
-ENV CELERY_RESULT_BACKEND redis://redis:6379/0
+ENV CELERY_BROKER_URL redis://redis_scipy:6379/0
+ENV CELERY_RESULT_BACKEND redis://redis_scipy:6379/0
 ENV C_FORCE_ROOT true
 
 ENV HOST 0.0.0.0
