--- a/web_Scilab/Dockerfile
+++ b/web_Scilab/Dockerfile
@@ -4,16 +4,16 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -y
 RUN apt-get install -y python3-pip python3-dev
 
-ENV CELERY_BROKER_URL redis://redis_scipy:6379/0
-ENV CELERY_RESULT_BACKEND redis://redis_scipy:6379/0
+ENV CELERY_BROKER_URL redis://redis_scilab:6379/0
+ENV CELERY_RESULT_BACKEND redis://redis_scilab:6379/0
 ENV C_FORCE_ROOT true
 
 ENV HOST 0.0.0.0
 ENV PORT 5000
 ENV DEBUG true
 # copy source code
-COPY . /web_SciPy
-WORKDIR /web_SciPy
+COPY . /web_Scilab
+WORKDIR /web_Scilab
 
 # install requirements
 RUN sudo pip3 install -r requirements.txt
