--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,15 @@ services:
     ports:
       - "8262:8200"
 
+  postgres: 
+    image: "postgres"
+    volumes:
+      - ./Data:/var/lib/postgresql/data
+    env_file:
+      - env_file
+    ports: 
+      - "8498:5432"
+  
   web_scipy:
     build:
       context: ./web_SciPy
@@ -27,6 +36,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis_scipy
+      - postgres
     volumes:
       - ./SciPy:/worker_SciPy/SciPy
 
@@ -48,6 +58,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis_r
+      - postgres
     volumes:
       - ./R:/worker_R/R
 
@@ -69,6 +80,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis_scilab
+      - postgres
     volumes:
       - ./Scilab:/worker_Scilab/Scilab
 
