--- a/worker_Scilab/Dockerfile
+++ b/worker_Scilab/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -y
 RUN apt-get install -y python3-pip
 RUN apt-get install -y build-essential libssl-dev libffi-dev libpq-dev python3-dev libfreetype6-dev libxft-dev
-RUN apt-get install --yes wget libX11-6
+RUN apt-get install --yes wget libX11-6 default-jdk
 
 ENV CELERY_BROKER_URL redis://redis_scilab:6379/0
 ENV CELERY_RESULT_BACKEND redis://redis_scilab:6379/0
